--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <a href="./assets/pdf/CV - KEZIA GLORIA LIE.pdf" download >
+        <a href="./assets/pdf/KEZIA GLORIA LIE_CV.pdf" download >
           <button type="button">
             <i class="bi bi-download" style="color: white; margin-right: 10px;"></i>
             Download Resume
